--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.2
 python-engineio==4.4.1
 python-socketio==5.8.0
+RPi.GPIO==0.7.1
 simple-websocket==0.10.0
 Werkzeug==2.3.4
 wsproto==1.2.0
