--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 bidict==0.22.1
 blinker==1.6.2
+boto3==1.26.146
+botocore==1.29.146
 click==8.1.3
 Flask==2.3.2
 Flask-SocketIO==5.3.4
 h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.2
+pigpio==1.78
+python-dateutil==2.8.2
 python-engineio==4.4.1
 python-socketio==5.8.0
 RPi.GPIO==0.7.1
+s3transfer==0.6.1
 simple-websocket==0.10.0
+six==1.16.0
+urllib3==1.26.16
 Werkzeug==2.3.4
 wsproto==1.2.0
